complete IDA modeling analysis in data-analysis-03.

--- a/source/Data-Analysis-02.ipynb
+++ b/source/Data-Analysis-02.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed146b71",
+   "id": "b6f2c640",
    "metadata": {},
    "source": [
     "## 3. LDA thematic analysis of all review texts in the business circle"
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b7d1410",
+   "id": "59f089b3",
    "metadata": {},
    "source": [
     "### Get the optimal number of topics (same as below)"
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b8e8e947",
+   "id": "6a341fb0",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f41c9e5a",
+   "id": "279f3024",
    "metadata": {},
    "source": [
     "### Improve \" lda_topic_modeling \" function, adjust parameters and add new functions"
@@ -854,8 +854,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "3a74434c",
+   "execution_count": 50,
+   "id": "3d702076",
    "metadata": {
     "scrolled": true
    },
@@ -900,7 +900,7 @@
     "    # Write the topic assignments to a CSV file\n",
     "    with open(output_file, \"w\", encoding=\"utf-8\", newline=\"\") as f:\n",
     "        writer = csv.writer(f)\n",
-    "        writer.writerow([\"review\", \"topic\"])\n",
+    "        writer.writerow([\"review_splitting\", \"topic\"])\n",
     "        for comment, topic in zip(comments, topic_assignments):\n",
     "            writer.writerow([comment, topic])\n",
     "    print(\"Topic assignments saved in:\", output_file)\n",
@@ -919,8 +919,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "1a870264",
+   "execution_count": 51,
+   "id": "683f3fab",
    "metadata": {
     "scrolled": false
    },
