--- a/source/Others.ipynb
+++ b/source/Others.ipynb
@@ -201,7 +201,9 @@
    "cell_type": "code",
    "execution_count": 116,
    "id": "766bff0e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -217,6 +219,78 @@
     "sen = '我挺好的'\n",
     "score = sentiment_score(sen)\n",
     "print(score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5241f789",
+   "metadata": {},
+   "source": [
+    "## 代码行数统计"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f2154140",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/colemei/Desktop/Graduation Design/source/Data-Analysis-02.ipynb: Code lines: 974, Comment lines: 83\n",
+      "/Users/colemei/Desktop/Graduation Design/source/Data-PreProcessing-01.ipynb: Code lines: 734, Comment lines: 94\n",
+      "/Users/colemei/Desktop/Graduation Design/source/Data-Analysis-01.ipynb: Code lines: 1134, Comment lines: 151\n",
+      "/Users/colemei/Desktop/Graduation Design/source/Data-Analysis-03.ipynb: Code lines: 448, Comment lines: 40\n",
+      "/Users/colemei/Desktop/Graduation Design/source/Content-Mining-01.ipynb: Code lines: 1468, Comment lines: 92\n",
+      "/Users/colemei/Desktop/Graduation Design/source/Data-Cleaning-02.ipynb: Code lines: 1421, Comment lines: 62\n",
+      "/Users/colemei/Desktop/Graduation Design/source/Others.ipynb: Code lines: 426, Comment lines: 40\n",
+      "/Users/colemei/Desktop/Graduation Design/source/Data-Storage-01.ipynb: Code lines: 163, Comment lines: 20\n",
+      "/Users/colemei/Desktop/Graduation Design/source/Data-Cleaning-01.ipynb: Code lines: 501, Comment lines: 5\n",
+      "Total Code lines: 7269\n",
+      "Total Comment lines: 587\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import re\n",
+    "\n",
+    "def count_code_lines(file_path):\n",
+    "    code_count = 0\n",
+    "    comment_count = 0\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        lines = file.readlines()\n",
+    "        is_in_comment = False\n",
+    "        for line in lines:\n",
+    "            stripped_line = line.strip()\n",
+    "            if stripped_line:\n",
+    "                if stripped_line.startswith('#'):\n",
+    "                    comment_count += 1\n",
+    "                else:\n",
+    "                    if re.search(r'#', stripped_line):\n",
+    "                        comment_count += 1\n",
+    "                    code_count += 1\n",
+    "    return code_count, comment_count\n",
+    "\n",
+    "def count_total_lines(folder_path):\n",
+    "    total_code_count = 0\n",
+    "    total_comment_count = 0\n",
+    "    for file in os.listdir(folder_path):\n",
+    "        file_path = os.path.join(folder_path, file)\n",
+    "        if file.endswith('.ipynb') and os.path.isfile(file_path):\n",
+    "            code_count, comment_count = count_code_lines(file_path)\n",
+    "            total_code_count += code_count\n",
+    "            total_comment_count += comment_count\n",
+    "            print(f\"{file_path}: Code lines: {code_count}, Comment lines: {comment_count}\")\n",
+    "    print(f\"Total Code lines: {total_code_count}\")\n",
+    "    print(f\"Total Comment lines: {total_comment_count}\")\n",
+    "\n",
+    "current_directory = os.getcwd()\n",
+    "count_total_lines(current_directory)\n"
    ]
   }
  ],
